--- a/src/app/layout/main-layout/main-layout.component.scss
+++ b/src/app/layout/main-layout/main-layout.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   height: 100vh;
   width: 100vw;
-  overflow-x: hidden;
+  overflow-x: auto;
   position: relative; // Needed for mobile backdrop positioning
 }
 
@@ -13,6 +13,11 @@
   height: 100%;
   transition: margin-left 300ms ease-in-out;
   position: relative; // Make this a positioning context for the backdrop
+}
+
+.breadcrumb-area {
+  padding-left: calc(var(--spacing-unit) * 3);
+  padding-right: calc(var(--spacing-unit) * 3);
 }
 
 .content-area {
