--- a/src/app/shared/components/breadcrumb/breadcrumb.component.scss
+++ b/src/app/shared/components/breadcrumb/breadcrumb.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: block;
   // Add some space below the breadcrumb trail
-  margin-bottom: calc(var(--spacing-unit) * 2.5);
+  // margin-bottom: calc(var(--spacing-unit) * 2.5);
 }
 
 .breadcrumb-list {
