--- a/src/app/shared/components/pagination/pagination.component.scss
+++ b/src/app/shared/components/pagination/pagination.component.scss
@@ -26,3 +26,7 @@
     width: auto;
   }
 }
+
+:host-context(.table-group) .pagination-container {
+  background-color: transparent;
+}
